--- a/public/menu.css
+++ b/public/menu.css
@@ -3,25 +3,24 @@ body {
     padding: 0px;
 }
 
-/* main page background */
-#main-page {
-    background-image: url(https://res.cloudinary.com/dik0ai1v8/image/upload/v1684317269/Default-velocity-cuisine-images/mainpage_suueoe.jpg);
-    background-size: cover;
+/* container */
+
+#container {
+    /* background-image: url("https://res.cloudinary.com/dik0ai1v8/image/upload/v1685006980/pexels-karolina-grabowska-4022107_adbatv.jpg"); */
+    /* background-size: cover; */
+    /* background-repeat: no-repeat; */
     height: 100vh;
     width: 100%;
 }
-
- /* buttons of navbar  */
- .navbar-brand{
+.navbar-brand {
     text-transform: capitalize;
     font-size: large;
     font-weight: bold;
-    color: aliceblue !important;
 }
 
 #home,#place-orders,#your-orders,#about-us{
     text-decoration: none;
-    color: white;
+    color: black;
     text-transform: capitalize;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     transition: all 0.5s ease-in-out;
@@ -45,75 +44,26 @@ body {
 
 .sign-up,.sign-in {
     text-decoration: none;
-    color: white;
-    font-size: large;
-    font-weight: 600;
-}
-.sign-in:hover {
-    color: aliceblue;
-}
-.sign-up:hover {
-    color: aliceblue;
-}
-
-
-/* company moto title  */
-
-.company-moto {
-    display: flex;
-    flex-direction: column;
-    height: 50vh;
-    width: 50vw;
-    margin: 28vh 0vh 0vh 6vw;
-}
-
-.title-moto {
-    color: aliceblue;
-    text-transform: capitalize;
-    font-family: cursive;
-    font-style: italic;
-    font-weight: 600;
-    margin-bottom: 3vh;
-}
-.description-moto {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: aliceblue;
-    font-weight: 400;
-    font-size: large;
-}
-/* span  */
-.velocity-cuisine {
-    text-transform: capitalize;
-    color: cyan;
-}
-
-.add-rest-button {
-    font-weight: 700;
     color: black;
-    text-align: center;
-    text-decoration: none;
-    text-transform: capitalize;
-    margin-top: 15px;
-    background-color: aliceblue;
-    padding: 10px;
-    width: 15vw;
-    transition: all 0.3s ease-in-out;
-}
-.add-rest-button:hover {
-    background-color: green;
-    color: aliceblue;
-    box-shadow: 4px 10px 20px rgb(50, 91, 52);
 }
 
-/* cards  */
-
-.cards {
+/* product cards  */
+/* .productcards {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background-image: linear-gradient(#fdfbfb , #ebedee);
-    height: 430px;
-    width: 100%;
+    margin: 0 8vw 0 8vw;
+  position: absolute;
+  top: 15vh;
+} */
+
+.productcards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap:20px;
+    margin: 0 8vw 0 8vw;
+    position: absolute;
+    top: 15vh;
 }
 
 .card {
