--- a/public/myorders.css
+++ b/public/myorders.css
@@ -1,72 +1,76 @@
 body {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 /* container */
 
 #container {
-    height: 100vh;
-    width: 100%;
+  height: 100vh;
+  width: 100%;
 }
 .navbar-brand {
-    text-transform: capitalize;
-    font-size: large;
-    font-weight: bold;
+  text-transform: capitalize;
+  font-size: large;
+  font-weight: bold;
 }
 
-#home,#place-orders,#your-orders,#about-us{
-    text-decoration: none;
-    color: black;
-    text-transform: capitalize;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    transition: all 0.5s ease-in-out;
+#home,
+#place-orders,
+#your-orders,
+#about-us {
+  text-decoration: none;
+  color: black;
+  text-transform: capitalize;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  transition: all 0.5s ease-in-out;
 }
-#home:hover{
-    letter-spacing: 2px;
-    font-weight: 400;
+#home:hover {
+  letter-spacing: 2px;
+  font-weight: 400;
 }
-#place-orders:hover{
-    letter-spacing: 2px;
-    font-weight: 400;
+#place-orders:hover {
+  letter-spacing: 2px;
+  font-weight: 400;
 }
-#your-orders:hover{
-    letter-spacing: 2px;
-    font-weight: 400;
+#your-orders:hover {
+  letter-spacing: 2px;
+  font-weight: 400;
 }
-#about-us:hover{
-    letter-spacing: 2px;
-    font-weight: 400;
+#about-us:hover {
+  letter-spacing: 2px;
+  font-weight: 400;
 }
 
-.sign-up,.sign-in {
-    text-decoration: none;
-    color: white;
+.sign-up,
+.sign-in {
+  text-decoration: none;
+  color: white;
 }
 
 /* list  */
 
-#list {
-    position: absolute;
-    top: 10vh;
-    left: 10vw;
-    right: 10vw;
-    display: flex;
-    flex-direction: column;
+.list-myorder {
+  position: absolute;
+  top: 10vh;
+  left: 10vw;
+  right: 10vw;
+  display: flex;
+  flex-direction: column;
 }
 
 #list_title {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 5vh;
-    text-align: center;
-    text-transform: capitalize;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 5vh;
+  text-align: center;
+  text-transform: capitalize;
 }
 
 .list_details {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    color: green;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  color: green;
 }
