updated few font color in css and deleted jwt stuffs and remove unnecessary comments

--- a/public/Signin.css
+++ b/public/Signin.css
@@ -45,7 +45,8 @@ body {
 
 .sign-up,.sign-in {
     text-decoration: none;
-    color: black;
+    color: white;
+    font-weight: 600;
 }
 /* login container  */
 #login-container {
